# Qross

./: README.md  index.html  package-lock.json  package.json
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: comp.rs  consts.rs  db.rs  main.rs  pixel.rs  qoi_errror.rs  qoi_file.rs
src/assets/: ICONS_DELETED.text
src/frontend_logic/: functionality.ts
