[package]
name = "image_compressor"
version = "0.0.0"
description = "Image Compressor"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]

# GUI
image = '0.24.7'
tauri = { version = "1.4", features = [ "protocol-asset", "dialog-all", "shell-open"] }

# DB
chrono = "0.4.19"
rusqlite = { version = "0.29.0", features = ["bundled", "chrono"] }

# SERDE
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# RAYON
rayon = '1.8.0'
itertools = '0.11.0'

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]


